<?xml version="1.0"?>
<package format="2">
  <name>line_description</name>
  <version>0.0.1</version>
  <description>Package for describing lines in 3D.</description>

  <maintainer email="fmilano@student.ethz.ch">Francesco Milano</maintainer>
  <maintainer email="dwalder@student.ethz.ch">Dominik Walder</maintainer>
  <maintainer email="fadri.furrer@mavt.ethz.ch">Fadri Furrer</maintainer>
  <maintainer email="tonci.novkovic@mavt.ethz.ch">Tonci Novkovic</maintainer>

  <author>Francesco Milano</author>
  <author>Dominik Walder</author>
  <author>Fadri Furrer</author>
  <author>Tonci Novkovic</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>cv_bridge</depend>
  <depend>eigen_catkin</depend>
  <depend>eigen_checks</depend>
  <depend>gflags_catkin</depend>
  <depend>glog_catkin</depend>
  <depend>line_detection</depend>
  <depend>pcl_ros</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>image_transport</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>opencv3_catkin</depend>
  <depend>rospy</depend>

</package>
