<?xml version="1.0"?>
<package format="2">
  <name>line_detection</name>
  <version>0.0.1</version>
  <description>Package for detecting lines in 3D.</description>
  <maintainer email="anonymous@email.com">Anonymous</maintainer>

  <author>Anonymous</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>cv_bridge</depend>
  <depend>eigen_catkin</depend>
  <depend>eigen_checks</depend>
  <depend>image_geometry</depend>
  <depend>image_transport</depend>
  <depend>geometry_msgs</depend>
  <depend>gflags_catkin</depend>
  <depend>glog_catkin</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>opencv3_catkin</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf</depend>
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>

</package>
