<?xml version="1.0"?>
<package format="2">
  <name>line_detection_python</name>
  <version>0.0.1</version>
  <description>Export python binding for line_detection.</description>

  <maintainer email="lichengk@student.ethz.ch">Chengkun Li</maintainer>
  <maintainer email="fadri.furrer@mavt.ethz.ch">Fadri Furrer</maintainer>
  <maintainer email="tonci.novkovic@mavt.ethz.ch">Tonci Novkovic</maintainer>

  <author>Chengkun Li</author>
  <author>Fadri Furrer</author>
  <author>Tonci Novkovic</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>opencv3_catkin</depend>
  <depend>line_detection</depend>
</package>
