<?xml version="1.0"?>
<package format="2">
  <name>line_matching</name>
  <version>0.0.1</version>
  <description>Package to match 3D lines in line_tools.</description>

  <maintainer email="fmilano@student.ethz.ch">Francesco Milano</maintainer>
  <maintainer email="fadri.furrer@mavt.ethz.ch">Fadri Furrer</maintainer>
  <maintainer email="tonci.novkovic@mavt.ethz.ch">Tonci Novkovic</maintainer>

  <author>Francesco Milano</author>
  <author>Fadri Furrer</author>
  <author>Tonci Novkovic</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>eigen_catkin</depend>
  <depend>eigen_checks</depend>
  <depend>gflags_catkin</depend>
  <depend>glog_catkin</depend>
  <depend>opencv3_catkin</depend>


  <depend>line_detection</depend>
</package>
