<?xml version="1.0"?>
<package format="2">
  <name>line_ros_utility</name>
  <version>0.0.1</version>
  <description>Package for utility functions for 3d_line_tools.</description>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>cv_bridge</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>eigen_catkin</depend>
  <depend>eigen_checks</depend>
  <depend>geometry_msgs</depend>
  <depend>gflags_catkin</depend>
  <depend>glog_catkin</depend>
  <depend>image_geometry</depend>
  <depend>image_transport</depend>
  <depend>message_generation</depend>
  <depend>opencv3_catkin</depend>
  <depend>pcl_catkin</depend>
  <depend>pcl_ros</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf</depend>

  <depend>line_clustering</depend>
  <depend>line_description</depend>
  <depend>line_detection</depend>
  <depend>line_matching</depend>
</package>
